<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.main.pages.profile.pages.SettingsFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.asisst.waaiem.user.main.pages.profile.viewmodel.ProfileViewmodel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView181"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/deactivate_account"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button32" />

        <Button
            android:id="@+id/button29"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_signup_button_background"
            android:text="@string/deactivate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView181" />

        <Button
            android:id="@+id/button31"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_signup_button_background"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView182" />

        <TextView
            android:id="@+id/textView182"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/delete_account"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button29" />

        <Button
            android:id="@+id/button32"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_signup_button_background"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>